tests/ui/fail/log_no_tpl.rs
extern crate emit;

fn main() {
    emit::info!(to: |_| {});
}
